--- a/Decision Tree/decision.ipynb
+++ b/Decision Tree/decision.ipynb
@@ -536,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Need larger datasets"
+    "Need larger datasets"
    ]
   }
  ],
