--- a/K Fold Cross Validation/Excercise/irisKFold.ipynb
+++ b/K Fold Cross Validation/Excercise/irisKFold.ipynb
@@ -90,23 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.96666667, 0.96666667, 0.93333333, 0.93333333, 1.        ])"
+       "array([0.98, 0.94, 0.96])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "cross_val_score(RandomForestClassifier(),iris.data,iris.target)"
+    "cross_val_score(RandomForestClassifier(),iris.data,iris.target,cv=3)"
    ]
   }
  ],
